Overview of changes in Glib::Object::Introspection 0.004
========================================================

* Fix building test libraries on Ubuntu 11.10.  They (Ubuntu devs) added
  --as-needed to the default linker flags, and that breaks building the test
  libraries for reasons I don't understand at the moment.  So simply add
  --no-as-needed for now.
* Properly check for definedness throughout; Use gperl_sv_is_defined instead
  of a direct comparison against &PL_sv_undef.

Overview of changes in Glib::Object::Introspection 0.003
========================================================

* Nothing, except for adding the NEWS entries that were forgotten for
  release 0.002.

Overview of changes in Glib::Object::Introspection 0.002
========================================================

* Add support for implementing interfaces.
* Add support for implementing object vfuncs.
* Add support for callbacks in callbacks.
* Add support for caller-allocated out arguments.
* Add support for nested structs.
* Add support for calling functions on structs.
* Add support for reading and writing fields of boxed types.
* Add support for flattening array ref returns.
* Add support for handling 'sentinel booleans'.
* Handle skipping arguments and return values.
* Fix ownership handling for GInitiallyUnowned.
* Expand the documentation.
* Fix build and test suite issues.

Overview of changes in Glib::Object::Introspection 0.001
========================================================

* Initial release.