@@ -1,4 +1,4 @@
-# Copyright (C) 2010 Torsten Schoenfeld <kaffeetisch@gmx.de>
+# Copyright (C) 2010-2011 Torsten Schoenfeld <kaffeetisch@gmx.de>
 #
 # This library is free software; you can redistribute it and/or modify it under
 # the terms of the GNU Library General Public License as published by the Free
@@ -12,7 +12,7 @@
 #
 # You should have received a copy of the GNU Library General Public License
 # along with this library; if not, write to the Free Software Foundation, Inc.,
-# 59 Temple Place - Suite 330, Boston, MA 02111-1307 USA.
+# 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA
 
 package Glib::Object::Introspection;
 
@@ -20,7 +20,7 @@ use strict;
 use warnings;
 use Glib;
 
-our $VERSION = 0.004;
+our $VERSION = 0.005;
 
 use Carp;
 $Carp::Internal{(__PACKAGE__)}++;
